--- a/_includes/header.html
+++ b/_includes/header.html
@@ -73,7 +73,7 @@
                 <a class="c-black ts-h5" href="https://tableau.abla.io/" title="Se connecter"> Se connecter </a>
               </div>
               <div class="navigation__button navigation__button--2 bg-black">
-                <a class="c-white ts-h5" href="https://tableau.abla.io/" title="Inscription"> Inscription gratuite </a>
+                <a class="c-white ts-h5" href="https://app.abla.io/" title="Inscription"> Inscription gratuite </a>
               </div>
             </div>
           </nav>
@@ -108,7 +108,7 @@
             </ul>
           </nav>
           <a class="site-header__button button button--ghost td-none tf-bold" href="https://tableau.abla.io/" title="Se connecter"> Se connecter </a>
-          <a class="site-header__button button bg-black td-none tf-bold" href="https://tableau.abla.io/" title="Inscription"> Inscription gratuite </a>
+          <a class="site-header__button button bg-black td-none tf-bold" href="https://app.abla.io/" title="Inscription"> Inscription gratuite </a>
         </div>
       </div>
     </header>
